--- a/ultiprep-ui/www/index.html
+++ b/ultiprep-ui/www/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="assets/sweetalert/dist/sweetalert.css">
     <link rel="stylesheet" href="assets/sweetalert/themes/google/google.css">
     <script src="assets/sweetalert/dist/sweetalert-dev.js" defer></script>
+    <script src="assets/angular-infinite-scroll/ngInfiniteScroll.min.js" defer></script>
     <link rel="stylesheet" href="assets/watnotif/css/bubble-n-slide/watnotif.right-top-bubble.css">
     <link rel="stylesheet" href="assets/watnotif/css/bubble-n-slide/watnotif-modified.css">
     <script src="assets/watnotif/js/watnotif-1.0.js" defer></script>
@@ -36,7 +37,6 @@
     <script src="controllers/home.controller.js"></script>
     <script src="controllers/notes.controller.js"></script>
     <script src="controllers/profile.controller.js"></script>
-    <script src="controllers/groups.controller.js"></script>
     <script src="services/authentication.service.js"></script>
     <script src="services/data.service.js"></script>
 </head>
