--- a/ultiprep-ui/www/index.html
+++ b/ultiprep-ui/www/index.html
@@ -5,23 +5,23 @@
     <title>Ultiprep – your ultimate exam prep tool</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.8/angular-ui-router.js"></script>
+    <script src="assets/jquery/3.2.1/jquery.js"></script>
+    <script src="assets/angularjs/1.4.8/angular.js"></script>
+    <script src="assets/angular-ui-router/0.2.8/angular-ui-router.min.js"></script>
     <link rel="stylesheet" href="assets/angular-loading-bar/build/loading-bar.css">
     <script src="assets/angular-loading-bar/build/loading-bar.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500|Roboto+Slab:300,400|Roboto+Condensed|Noto+Sans|Montserrat:400,700">
+    <link rel="stylesheet" href="assets/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="assets/bootstrap/3.3.7/js/bootstrap.js"></script>
     <link rel="stylesheet" href="assets/font-awesome/4.7.0/css/font-awesome.css">
     <link rel="stylesheet" href="assets/froala/css/froala_editor.css">
     <link rel="stylesheet" href="assets/froala/css/froala_style.css">
     <link rel="stylesheet" href="assets/froala/css/themes/gray-modified.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.7.1/js/froala_editor.min.js" defer></script>
+    <script src="assets/froala/js/froala_editor.min.js" defer></script>
     <script src="assets/froala/angular-froala/angular-froala.js" defer></script>
     <link rel="stylesheet" href="assets/tooltipster/css/tooltipster.bundle.css">
     <link rel="stylesheet" href="assets/tooltipster/css/plugins/tooltipster/sideTip/themes/tooltipster-sideTip-borderless.css">
     <script src="assets/tooltipster/js/tooltipster.bundle.js" defer></script>
+    <script src="assets/elastic-lunr/elasticlunr.js" defer></script>
     <link rel="stylesheet" href="assets/sweetalert/dist/sweetalert.css">
     <link rel="stylesheet" href="assets/sweetalert/themes/google/google.css">
     <script src="assets/sweetalert/dist/sweetalert-dev.js" defer></script>
